fix text align

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -256,13 +256,14 @@ a:active {
 
 .section-header {
     text-align: var(--section-header-align);
-    padding: var(--section-header-align);
+    padding: var(--section-header-padding);
 }
 .section-body{
     padding: var(--section-body-padding);
 }
 .section-footer{
     padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
 }
 .section-title {
     font-family: var(--font-family-title);
